get log multiple jobs